# shiroko-python

./: .gitignore  README.md  gen_protos.py  gen_protos.sh  pyproject.toml  shell.nix
.github/workflows/: publish-pypi.yml
protos/: README.md
protos/screencap/: screencap.proto
src/: client.py  input.py  input.pyi  screencap.py  shell.py  shell.pyi  window.py
src/shiroko/: __init__.py  _zeroconf.py  input.pyi  manager.py  manager.pyi  shell.py  shell.pyi  window.pyi
