[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "shiroko"
version = "0.0.0_alpha"
authors = [{ name = "HumXC", email = "Hum-XC@outlook.com" }]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/HumXC/shiroko-python"
"Bug Tracker" = "https://github.com/HumXC/shiroko-python/issues"
